# src/user/user.controller.ts
@@ -1,10 +1,9 @@
-import { Controller } from '@nestjs/common';
-import { TypedRoute } from '@nestia/core';
-import { UserService } from './user.service';
-import { UserEntity } from '../entities/user.entity';
-import { CurrentUser } from '../auth/jwt/getUser.decorator';
-import { UserLoginType } from '../auth/userLogin.type';
-import { ApiTags } from '@nestjs/swagger';
+import { Controller } from "@nestjs/common";
+import { TypedRoute } from "@nestia/core";
+import { UserService } from "./user.service";
+import { CurrentUser } from "../auth/jwt/getUser.decorator";
+import { UserLoginType } from "../auth/userLogin.type";
+import { ApiTags } from "@nestjs/swagger";
 
 @Controller('users')
 @ApiTags('user')
@@ -14,7 +13,8 @@ export class UserController {
   @TypedRoute.Get()
   async currentUserInfo(
     @CurrentUser() { id }: UserLoginType,
-  ): Promise<UserEntity[]> {
-    return this.userService.currentUserInfo(id);
+  ): Promise<{ id: number; name: string }> {
+    const userEntities = await this.userService.currentUserInfo(id);
+    return { id: userEntities!.id, name: userEntities!.name };
   }
 }
